Optimization of roles related classes