@@ -1,4 +1,4 @@
-package com.example.common;
+package com.example.common.role;
 
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -7,7 +7,6 @@ import org.springframework.security.oauth2.jwt.Jwt;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 //Maps the “roles” claim from the JWT token to a list of Granted Authorities in the endpoints service
 public class JwtRoleConverter implements Converter<Jwt, Collection> {
@@ -18,6 +17,6 @@ public class JwtRoleConverter implements Converter<Jwt, Collection> {
         if (roles == null || roles.isEmpty()) {
             return new ArrayList<>();
         }
-        return roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return roles.stream().map(SimpleGrantedAuthority::new).toList();
     }
 }
